--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
         <div
           class="flex items-center gap-2 bg-[#41ff6b1a] px-4 py-2 rounded-3xl"
         >
-          <span>0</span>
+          <span id="heart-count">0</span>
           <img class="block w-5 md:w-6" src="./assets/heart.png" alt="" />
         </div>
         <div
           class="flex items-center gap-2 bg-[#41ff6b1a] px-4 py-2 rounded-3xl"
         >
-          <span>100</span>
+          <span id="coin-count">100</span>
           <img class="block w-5" src="./assets/coin.png" alt="" />
         </div>
         <button
@@ -114,7 +114,7 @@
                 src="./assets/emergency.png"
                 alt=""
               />
-              <i class="fa-regular fa-heart cursor-pointer"></i>
+              <i class="fa-regular fa-heart heart-icon cursor-pointer"></i>
             </div>
             <div class="mt-3 mb-3">
               <h3 class="font-bold text-[16px] text-[#111111]">
@@ -141,7 +141,7 @@
               </button>
 
               <button
-                class="btn px-6 rounded-xl bg-[#00a63e] text-[#FFFFFF] hover:bg-slate-600"
+                class="btn call-btn px-6 rounded-xl bg-[#00a63e] text-[#FFFFFF] hover:bg-slate-600"
               >
                 <i class="fa-solid fa-phone"></i> Call
               </button>
@@ -157,7 +157,7 @@
                 src="./assets/police.png"
                 alt=""
               />
-              <i class="fa-regular fa-heart cursor-pointer"></i>
+              <i class="fa-regular fa-heart heart-icon cursor-pointer"></i>
             </div>
 
             <div class="mt-3 mb-3">
@@ -189,7 +189,7 @@
               </button>
 
               <button
-                class="btn px-6 rounded-xl bg-[#00a63e] text-[#FFFFFF] hover:bg-slate-600"
+                class="btn call-btn px-6 rounded-xl bg-[#00a63e] text-[#FFFFFF] hover:bg-slate-600"
               >
                 <i class="fa-solid fa-phone"></i> Call
               </button>
@@ -205,7 +205,7 @@
                 src="./assets/fire-service.png"
                 alt=""
               />
-              <i class="fa-regular fa-heart cursor-pointer"></i>
+              <i class="fa-regular fa-heart heart-icon cursor-pointer"></i>
             </div>
 
             <div class="mt-3 mb-3">
@@ -236,7 +236,7 @@
               </button>
 
               <button
-                class="btn px-6 rounded-xl bg-[#00a63e] text-[#FFFFFF] hover:bg-slate-600"
+                class="btn call-btn px-6 rounded-xl bg-[#00a63e] text-[#FFFFFF] hover:bg-slate-600"
               >
                 <i class="fa-solid fa-phone"></i> Call
               </button>
@@ -252,7 +252,7 @@
                 src="./assets/ambulance.png"
                 alt=""
               />
-              <i class="fa-regular fa-heart cursor-pointer"></i>
+              <i class="fa-regular fa-heart heart-icon cursor-pointer"></i>
             </div>
 
             <div class="mt-3 mb-3">
@@ -284,7 +284,7 @@
               </button>
 
               <button
-                class="btn px-6 rounded-xl bg-[#00a63e] text-[#FFFFFF] hover:bg-slate-600"
+                class="btn call-btn px-6 rounded-xl bg-[#00a63e] text-[#FFFFFF] hover:bg-slate-600"
               >
                 <i class="fa-solid fa-phone"></i> Call
               </button>
@@ -300,7 +300,7 @@
                 src="./assets/emergency.png"
                 alt=""
               />
-              <i class="fa-regular fa-heart cursor-pointer"></i>
+              <i class="fa-regular fa-heart heart-icon cursor-pointer"></i>
             </div>
 
             <div class="mt-3 mb-3">
@@ -332,7 +332,7 @@
               </button>
 
               <button
-                class="btn px-6 rounded-xl bg-[#00a63e] text-[#FFFFFF] hover:bg-slate-600"
+                class="btn call-btn px-6 rounded-xl bg-[#00a63e] text-[#FFFFFF] hover:bg-slate-600"
               >
                 <i class="fa-solid fa-phone"></i> Call
               </button>
@@ -348,7 +348,7 @@
                 src="./assets/emergency.png"
                 alt=""
               />
-              <i class="fa-regular fa-heart cursor-pointer"></i>
+              <i class="fa-regular fa-heart heart-icon cursor-pointer"></i>
             </div>
 
             <div class="mt-3 mb-3">
@@ -380,7 +380,7 @@
               </button>
 
               <button
-                class="btn px-6 rounded-xl bg-[#00a63e] text-[#FFFFFF] hover:bg-slate-600"
+                class="btn call-btn px-6 rounded-xl bg-[#00a63e] text-[#FFFFFF] hover:bg-slate-600"
               >
                 <i class="fa-solid fa-phone"></i> Call
               </button>
@@ -396,7 +396,7 @@
                 src="./assets/emergency.png"
                 alt=""
               />
-              <i class="fa-regular fa-heart cursor-pointer"></i>
+              <i class="fa-regular fa-heart heart-icon cursor-pointer"></i>
             </div>
 
             <div class="mt-3 mb-3">
@@ -428,7 +428,7 @@
               </button>
 
               <button
-                class="btn px-6 rounded-xl bg-[#00a63e] text-[#FFFFFF] hover:bg-slate-600"
+                class="btn call-btn px-6 rounded-xl bg-[#00a63e] text-[#FFFFFF] hover:bg-slate-600"
               >
                 <i class="fa-solid fa-phone"></i> Call
               </button>
@@ -444,7 +444,7 @@
                 src="./assets/emergency.png"
                 alt=""
               />
-              <i class="fa-regular fa-heart cursor-pointer"></i>
+              <i class="fa-regular fa-heart heart-icon cursor-pointer"></i>
             </div>
 
             <div class="mt-3 mb-3">
@@ -476,7 +476,7 @@
               </button>
 
               <button
-                class="btn px-6 rounded-xl bg-[#00a63e] text-[#FFFFFF] hover:bg-slate-600"
+                class="btn call-btn px-6 rounded-xl bg-[#00a63e] text-[#FFFFFF] hover:bg-slate-600"
               >
                 <i class="fa-solid fa-phone"></i> Call
               </button>
@@ -492,7 +492,7 @@
                 src="./assets/emergency.png"
                 alt=""
               />
-              <i class="fa-regular fa-heart cursor-pointer"></i>
+              <i class="fa-regular fa-heart heart-icon cursor-pointer"></i>
             </div>
 
             <div class="mt-3 mb-3">
@@ -524,7 +524,7 @@
               </button>
 
               <button
-                class="btn px-6 rounded-xl bg-[#00a63e] text-[#FFFFFF] hover:bg-slate-600"
+                class="btn call-btn px-6 rounded-xl bg-[#00a63e] text-[#FFFFFF] hover:bg-slate-600"
               >
                 <i class="fa-solid fa-phone"></i> Call
               </button>
@@ -543,27 +543,17 @@
             </div>
             <button
               class="btn px-4 md:px-6 rounded-full bg-[#00a63e] text-[#FFFFFF] hover:bg-slate-600"
+              id="clear-btn"
             >
               Clear
             </button>
           </div>
-          <div class="p-3">
-            <div
-              class="flex justify-between items-center p-4 bg-[rgba(250,250,250,1)] rounded-2xl"
-            >
-              <div>
-                <h1 class="text-[#111111] font-semibold text-[12px]">
-                  Fire Service Number
-                </h1>
-                <p class="text-[#5C5C5C] text-[10px]">999</p>
-              </div>
-              <p class="text-[10px]">11:36:58 AM</p>
-            </div>
-          </div>
+
+          <div id="call-history"></div>
         </div>
       </div>
     </div>
 
-    <script src="./script.js"></script>
+    <script src="./home.js"></script>
   </body>
 </html>
