added all files

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <button
           class="btn bg-[#00a63e] text-white rounded-3xl px-5 md:px-7 py-2"
         >
-          <span>2 Copy</span>
+          <span id="copy-count">0</span>Copy
         </button>
       </div>
     </div>
@@ -135,7 +135,7 @@
               class="flex flex-col md:flex-row justify-between gap-2 md:gap-0"
             >
               <button
-                class="btn hover:bg-slate-800 hover:text-[#FFFFFF] px-6 rounded-xl"
+                class="btn copy-btn hover:bg-slate-800 hover:text-[#FFFFFF] px-6 rounded-xl"
               >
                 <i class="fa-solid fa-copy"></i> Copy
               </button>
@@ -183,7 +183,7 @@
               class="flex flex-col md:flex-row justify-between gap-2 md:gap-0"
             >
               <button
-                class="btn hover:bg-slate-800 hover:text-[#FFFFFF] px-6 rounded-xl"
+                class="btn copy-btn hover:bg-slate-800 hover:text-[#FFFFFF] px-6 rounded-xl"
               >
                 <i class="fa-solid fa-copy"></i> Copy
               </button>
@@ -230,7 +230,7 @@
               class="flex flex-col md:flex-row justify-between gap-2 md:gap-0"
             >
               <button
-                class="btn hover:bg-slate-800 hover:text-[#FFFFFF] px-6 rounded-xl"
+                class="btn copy-btn hover:bg-slate-800 hover:text-[#FFFFFF] px-6 rounded-xl"
               >
                 <i class="fa-solid fa-copy"></i> Copy
               </button>
@@ -278,7 +278,7 @@
               class="flex flex-col md:flex-row justify-between gap-2 md:gap-0"
             >
               <button
-                class="btn hover:bg-slate-800 hover:text-[#FFFFFF] px-6 rounded-xl"
+                class="btn copy-btn hover:bg-slate-800 hover:text-[#FFFFFF] px-6 rounded-xl"
               >
                 <i class="fa-solid fa-copy"></i> Copy
               </button>
@@ -326,7 +326,7 @@
               class="flex flex-col md:flex-row justify-between gap-2 md:gap-0"
             >
               <button
-                class="btn hover:bg-slate-800 hover:text-[#FFFFFF] px-6 rounded-xl"
+                class="btn copy-btn hover:bg-slate-800 hover:text-[#FFFFFF] px-6 rounded-xl"
               >
                 <i class="fa-solid fa-copy"></i> Copy
               </button>
@@ -374,7 +374,7 @@
               class="flex flex-col md:flex-row justify-between gap-2 md:gap-0"
             >
               <button
-                class="btn hover:bg-slate-800 hover:text-[#FFFFFF] px-6 rounded-xl"
+                class="btn copy-btn hover:bg-slate-800 hover:text-[#FFFFFF] px-6 rounded-xl"
               >
                 <i class="fa-solid fa-copy"></i> Copy
               </button>
@@ -422,7 +422,7 @@
               class="flex flex-col md:flex-row justify-between gap-2 md:gap-0"
             >
               <button
-                class="btn hover:bg-slate-800 hover:text-[#FFFFFF] px-6 rounded-xl"
+                class="btn copy-btn hover:bg-slate-800 hover:text-[#FFFFFF] px-6 rounded-xl"
               >
                 <i class="fa-solid fa-copy"></i> Copy
               </button>
@@ -470,7 +470,7 @@
               class="flex flex-col md:flex-row justify-between gap-2 md:gap-0"
             >
               <button
-                class="btn hover:bg-slate-800 hover:text-[#FFFFFF] px-6 rounded-xl"
+                class="btn copy-btn hover:bg-slate-800 hover:text-[#FFFFFF] px-6 rounded-xl"
               >
                 <i class="fa-solid fa-copy"></i> Copy
               </button>
@@ -518,7 +518,7 @@
               class="flex flex-col md:flex-row justify-between gap-2 md:gap-0"
             >
               <button
-                class="btn hover:bg-slate-800 hover:text-[#FFFFFF] px-6 rounded-xl"
+                class="btn copy-btn hover:bg-slate-800 hover:text-[#FFFFFF] px-6 rounded-xl"
               >
                 <i class="fa-solid fa-copy"></i> Copy
               </button>
